update web name

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- skrypt embedu z Twojej instancji --> 
     <script async id="cal-embed-script" src="https://reviewer-cooper-tumor-prep.trycloudflare.com/embed/embed.js"></script>
 
-    <title>Trader web app</title>
+    <title>Dominik web page</title>
   </head>
   <body>
     <div id="root"></div>
